Add training & evaluation loop for test set

--- a/fast/glue.ipynb
+++ b/fast/glue.ipynb
@@ -30,7 +30,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 2,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -66,7 +66,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 3,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -85,7 +85,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 4,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -148,7 +148,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -166,7 +166,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 6,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -195,7 +195,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -226,7 +226,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -262,7 +262,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -298,7 +298,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -346,7 +346,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -409,7 +409,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -482,7 +482,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -571,7 +571,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -593,7 +593,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -614,7 +614,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -679,7 +679,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -714,7 +714,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -744,7 +744,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -772,7 +772,7 @@
     "\n",
     "with open(results_file, 'w', newline='') as csvfile:\n",
     "    writer = csv.writer(csvfile)\n",
-    "    header = metric_types + ['num_epochs', 'training time', 'embedding time', 'training energy', 'embedding energy'] + list(all_params[0].keys())\n",
+    "    header = metric_types + ['num_epochs', 'training time / epoch', 'embedding time', 'training energy / epoch', 'embedding energy'] + list(all_params[0].keys())\n",
     "    writer.writerow(header)\n",
     "print(f\"saving results to ./{results_file}\")\n",
     "metric_types += [\"epoch\"]\n",
@@ -856,6 +856,290 @@
    "source": [
     "best_row"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "# Train & Eval on Test set"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "## Set best hyperparameter combination"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 20,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 hyperparameter combinations\n"
+     ]
+    }
+   ],
+   "source": [
+    "input_size = X_train_computed.shape[1]\n",
+    "\n",
+    "param_grid = {  # best hyperparameters combination\n",
+    "    'max_epochs': [50],\n",
+    "    'batch_size': [128],\n",
+    "    'learning_rate': [0.0001],\n",
+    "    'category': ['BC'],\n",
+    "    'norm': [False],\n",
+    "    'input_size': [768],\n",
+    "    'layer_size': [768],\n",
+    "    'num_classes': [1],\n",
+    "    'num_layers': [1],\n",
+    "    'weight_decay': [0.01],\n",
+    "    'patience': [5],\n",
+    "    'min_delta': [0],\n",
+    "    'device': [device_name],\n",
+    "    'verbose':[True]\n",
+    "}\n",
+    "\n",
+    "# Create a list of all combinations of hyperparameters\n",
+    "all_params = [dict(zip(param_grid.keys(), v)) for v in itertools.product(*param_grid.values())]\n",
+    "print(f\"{len(all_params)} hyperparameter combinations\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 48,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "saving results to ./results/cls_single/mrpc/test_20240109_014935_DistilRoBERTa.csv\n"
+     ]
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "50a949d8a76948e9852c28096b4aa759",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "  0%|          | 0/1 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "saving predictions to ./results/cls_single/mrpc/y_pred_20240109_014935_DistilRoBERTa.tsv\n"
+     ]
+    }
+   ],
+   "source": [
+    "y_pred = None\n",
+    "\n",
+    "# Create output folder if it doesn't exist\n",
+    "if not os.path.exists('output'):\n",
+    "    os.makedirs('output')\n",
+    "\n",
+    "# Setup for logging\n",
+    "console_output_filename = f'./output/{\"_\".join(embedding_param[0])}_{task_param}_console_output.txt'\n",
+    "\n",
+    "with open(console_output_filename, 'a') as logfile:\n",
+    "    logfile.write('\\n\\nBEGIN FINAL TRAINING LOOP\\n\\n')\n",
+    "\n",
+    "# Setup for saving results\n",
+    "results_folder = pathlib.Path(f\"results/{embedding_param[0]}/{task_param}\")\n",
+    "results_folder.mkdir(parents=True, exist_ok=True)\n",
+    "save_file_id = datetime.now().strftime(\"%Y%m%d_%H%M%S\")\n",
+    "test_results_file = results_folder / f\"test_{save_file_id}_{model_param}.csv\"\n",
+    "test_y_pred_file = results_folder / f\"y_pred_{save_file_id}_{model_param}.tsv\"\n",
+    "\n",
+    "# different metrics are recorded for classification vs regression tasks\n",
+    "if task_config.class_type in [\"BC\", \"MC\"]:\n",
+    "    metric_types = ['mcc', 'f1', 'accuracy']\n",
+    "elif task_config.class_type == \"R\":\n",
+    "    metric_types = ['pearson', 'spearman']\n",
+    "\n",
+    "with open(test_results_file, 'w', newline='') as csvfile:\n",
+    "    writer = csv.writer(csvfile)\n",
+    "    header = metric_types + ['training time / epoch', 'embedding time', 'training energy / epoch', 'embedding energy'] + list(all_params[0].keys())\n",
+    "    writer.writerow(header)\n",
+    "print(f\"saving results to ./{test_results_file}\")\n",
+    "# Saves best accuracy for progress bar display\n",
+    "display_best = float(\"-inf\")\n",
+    "\n",
+    "# Iterate over all combinations of hyperparameters\n",
+    "bar = tqdm(enumerate(all_params), total=len(all_params))\n",
+    "for i, params in bar:\n",
+    "    # Formatting params to display\n",
+    "    print_params = params.copy()\n",
+    "    for param in ['category', 'device']:\n",
+    "        del print_params[param]\n",
+    "        \n",
+    "    # reset torch so that results are consistent\n",
+    "    torch.manual_seed(seed)\n",
+    "    torch.cuda.manual_seed_all(seed)\n",
+    "\n",
+    "    # Initialize the model with current set of hyperparameters\n",
+    "    feed_forward = FeedForward(**params)\n",
+    "\n",
+    "    _, train_times_per_epoch, energy_per_epoch = feed_forward.fit(X_train_computed,\n",
+    "                                                                        Y_train)\n",
+    "    \n",
+    "    metrics = feed_forward._validate(X_test_computed, Y_test, return_predictions=True)\n",
+    "\n",
+    "    y_pred = metrics[\"predictions\"]\n",
+    "    del metrics[\"predictions\"]\n",
+    "\n",
+    "    y_pred_df = pd.DataFrame(y_pred, columns=[\"prediction\"])\n",
+    "    y_pred_df[\"index\"] = y_pred_df.index\n",
+    "    y_pred_df = y_pred_df[[\"index\", \"prediction\"]]\n",
+    "    y_pred_df.to_csv(test_y_pred_file, sep='\\t', index=False, header=True)\n",
+    "    print(f\"saving predictions to ./{test_y_pred_file}\")\n",
+    "    \n",
+    "    # Log average training time per epoch for current parameter set\n",
+    "    # Note: FFN frequently stops early\n",
+    "    training_time = np.mean(train_times_per_epoch)\n",
+    "    training_energy = np.mean(energy_per_epoch) \n",
+    "    # Compute energy for embedding generation\n",
+    "    embedding_energy = get_energy(embedding_time, device) # This method effectively just computes energy for a given time\n",
+    "\n",
+    "    metric_vals = [metrics[mt] for mt in metric_types]\n",
+    "    \n",
+    "    # displaying results in progress bar\n",
+    "    display_recent = metrics[\"pearson\" if task_config.class_type == \"R\" else \"accuracy\"]\n",
+    "    display_best = max(display_best, display_recent)\n",
+    "    bar.set_description(f\"Best: {display_best:.5f}, Last: {display_recent:.5f}\")\n",
+    "\n",
+    "    # Write stats to log file\n",
+    "    with open(console_output_filename, 'a') as logfile:\n",
+    "        logfile.write(f\"\\n\\nTraining with parameters:\\n{print_params}\")\n",
+    "        for name, val in zip(metric_types, metric_vals):\n",
+    "            logfile.write(f\"\\nValidation {name}: {val}\")\n",
+    "        logfile.write(f\"\\nTraining time      : {training_time}\")\n",
+    "        logfile.write(f\"\\nEmbedding time     : {embedding_time}\") \n",
+    "        logfile.write(f\"\\nTraining energy    : {training_energy}\") \n",
+    "        logfile.write(f\"\\nEmbedding energy   : {embedding_energy}\") \n",
+    "    # Write to results csv\n",
+    "    with open(test_results_file, 'a', newline='') as csvfile:\n",
+    "        writer = csv.writer(csvfile)\n",
+    "        row = metric_vals + [training_time, embedding_time, training_energy, embedding_energy] + list(params.values())\n",
+    "        writer.writerow(row)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>mcc</th>\n",
+       "      <th>f1</th>\n",
+       "      <th>accuracy</th>\n",
+       "      <th>num_epochs</th>\n",
+       "      <th>training time</th>\n",
+       "      <th>embedding time</th>\n",
+       "      <th>training energy</th>\n",
+       "      <th>embedding energy</th>\n",
+       "      <th>max_epochs</th>\n",
+       "      <th>batch_size</th>\n",
+       "      <th>...</th>\n",
+       "      <th>norm</th>\n",
+       "      <th>input_size</th>\n",
+       "      <th>layer_size</th>\n",
+       "      <th>num_classes</th>\n",
+       "      <th>num_layers</th>\n",
+       "      <th>weight_decay</th>\n",
+       "      <th>patience</th>\n",
+       "      <th>min_delta</th>\n",
+       "      <th>device</th>\n",
+       "      <th>verbose</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.341814</td>\n",
+       "      <td>0.69913</td>\n",
+       "      <td>0.69913</td>\n",
+       "      <td>0.209404</td>\n",
+       "      <td>0.000166</td>\n",
+       "      <td>15.705284</td>\n",
+       "      <td>0.012445</td>\n",
+       "      <td>50</td>\n",
+       "      <td>128</td>\n",
+       "      <td>0.0001</td>\n",
+       "      <td>...</td>\n",
+       "      <td>768</td>\n",
+       "      <td>768</td>\n",
+       "      <td>1</td>\n",
+       "      <td>1</td>\n",
+       "      <td>0.01</td>\n",
+       "      <td>5</td>\n",
+       "      <td>0</td>\n",
+       "      <td>mps</td>\n",
+       "      <td>True</td>\n",
+       "      <td>NaN</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "<p>1 rows × 22 columns</p>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        mcc       f1  accuracy  num_epochs  training time  embedding time  \\\n",
+       "0  0.341814  0.69913   0.69913    0.209404       0.000166       15.705284   \n",
+       "\n",
+       "   training energy  embedding energy  max_epochs  batch_size  ... norm  \\\n",
+       "0         0.012445                50         128      0.0001  ...  768   \n",
+       "\n",
+       "   input_size  layer_size  num_classes  num_layers  weight_decay  patience  \\\n",
+       "0         768           1            1        0.01             5         0   \n",
+       "\n",
+       "   min_delta  device verbose  \n",
+       "0        mps    True     NaN  \n",
+       "\n",
+       "[1 rows x 22 columns]"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "results_df = pd.read_csv(test_results_file)\n",
+    "results_df"
+   ]
   }
  ],
  "metadata": {
@@ -874,7 +1158,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.9.7"
+   "version": "3.9.0"
   }
  },
  "nbformat": 4,
