--- a/fast/hyperparam.ipynb
+++ b/fast/hyperparam.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 57,
+   "execution_count": 1,
    "id": "a4d91904-7fb0-40ff-a07c-2664660f5d7d",
    "metadata": {},
    "outputs": [],
@@ -80,7 +80,7 @@
     "        print(f\"{metric} / {second_metric}: {hyperparam_grid[metric][0]} / {hyperparam_grid[second_metric][0]}\")\n",
     "    print()\n",
     "    \n",
-    "    for key in [\"pearson\", \"spearman\", \"accuracy\", \"mcc\", \"f1\", \"loss\", \"training time\", \"training energy\", \"device\", \"embedding time\", \"embedding energy\"]:\n",
+    "    for key in [\"pearson\", \"spearman\", \"accuracy\", \"mcc\", \"f1\", \"loss\", \"training time\", \"training energy\", \"embedding time\", \"embedding energy\"]:\n",
     "        if key in hyperparam_grid:\n",
     "            del hyperparam_grid[key]\n",
     "\n",
@@ -100,7 +100,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 69,
+   "execution_count": 2,
    "id": "036b2c55-d063-4094-a481-dc1466d81e1e",
    "metadata": {},
    "outputs": [
@@ -147,7 +147,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 19,
+   "execution_count": 3,
    "id": "c77e019c",
    "metadata": {},
    "outputs": [
