Add all final results for CLS

--- a/fast/hyperparam.ipynb
+++ b/fast/hyperparam.ipynb
@@ -18,7 +18,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 2,
    "id": "a4d91904-7fb0-40ff-a07c-2664660f5d7d",
    "metadata": {},
    "outputs": [],
@@ -102,7 +102,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 3,
    "id": "036b2c55-d063-4094-a481-dc1466d81e1e",
    "metadata": {},
    "outputs": [
@@ -111,39 +111,39 @@
      "output_type": "stream",
      "text": [
       "embedding: cls_single\n",
-      "task: mnli_matched\n",
-      "accuracy: 0.6770249617931737\n",
+      "task: mnli_mismatched\n",
+      "accuracy: 0.676159479251424\n",
       "\n"
      ]
     },
     {
      "data": {
       "text/plain": [
-       "{'num_epochs': [8],\n",
-       " 'max_epochs': [50.0],\n",
+       "{'num_epochs': [6],\n",
+       " 'max_epochs': [50],\n",
        " 'batch_size': [32],\n",
        " 'learning_rate': [0.001],\n",
        " 'category': ['MC'],\n",
        " 'norm': [False],\n",
        " 'input_size': [768],\n",
-       " 'layer_size': [768],\n",
+       " 'layer_size': [384],\n",
        " 'num_classes': [3],\n",
-       " 'num_layers': [1],\n",
-       " 'weight_decay': [0.01],\n",
+       " 'num_layers': [10],\n",
+       " 'weight_decay': [0.0001],\n",
        " 'patience': [3],\n",
        " 'min_delta': [0],\n",
-       " 'device': ['mps'],\n",
-       " 'verbose': [True]}"
+       " 'verbose': [True],\n",
+       " 'device': ['mps']}"
       ]
      },
-     "execution_count": 8,
+     "execution_count": 3,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "embedding = \"cls_single\"\n",
-    "task = \"mnli_matched\"\n",
+    "task = \"mnli_mismatched\"\n",
     "filepath = \"./results/\" # base directory for results .csv files\n",
     "dates = [\"20240105\", \"20240106\", \"20240107\", \"20240108\", \"20240109\", \"20240110\"] # get results from specific dates\n",
     "\n",
