--- a/fast/predict.ipynb
+++ b/fast/predict.ipynb
@@ -23,13 +23,13 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
     "model_param = \"DistilRoBERTa\"\n",
-    "task_param = \"mrpc\"\n",
-    "embedding_param = [\"meanpool_single\"]"
+    "task_param = \"ax\"\n",
+    "embedding_param = [\"cls_single\"]"
    ]
   },
   {
@@ -41,7 +41,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 23,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -77,7 +77,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 3,
+   "execution_count": 24,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -96,7 +96,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 25,
    "metadata": {},
    "outputs": [
     {
@@ -174,7 +174,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 5,
+   "execution_count": 26,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -203,7 +203,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 6,
+   "execution_count": 28,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -234,29 +234,77 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 29,
    "metadata": {},
    "outputs": [
     {
      "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "494ef515d34b4e84acd9513244db2bd8",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Downloading data files:   0%|          | 0/1 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "2b9964349fa34bac8cbaa2e48027a918",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Downloading data:   0%|          | 0.00/80.8k [00:00<?, ?B/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "a55ed90a6b134be3a28d3867e2b1c24f",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Extracting data files:   0%|          | 0/1 [00:00<?, ?it/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
+      "application/vnd.jupyter.widget-view+json": {
+       "model_id": "388c113c754b40838f4acd923b14448c",
+       "version_major": 2,
+       "version_minor": 0
+      },
+      "text/plain": [
+       "Generating test split:   0%|          | 0/1104 [00:00<?, ? examples/s]"
+      ]
+     },
+     "metadata": {},
+     "output_type": "display_data"
+    },
+    {
+     "data": {
       "text/plain": [
        "DatasetDict({\n",
-       "    train: Dataset({\n",
-       "        features: ['sentence1', 'sentence2', 'label', 'idx'],\n",
-       "        num_rows: 3668\n",
-       "    })\n",
-       "    validation: Dataset({\n",
-       "        features: ['sentence1', 'sentence2', 'label', 'idx'],\n",
-       "        num_rows: 408\n",
-       "    })\n",
        "    test: Dataset({\n",
-       "        features: ['sentence1', 'sentence2', 'label', 'idx'],\n",
-       "        num_rows: 1725\n",
+       "        features: ['premise', 'hypothesis', 'label', 'idx'],\n",
+       "        num_rows: 1104\n",
        "    })\n",
        "})"
       ]
      },
-     "execution_count": 7,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -294,16 +342,19 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": 30,
    "metadata": {},
    "outputs": [
     {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "(3668,)\n",
-      "(408,)\n",
-      "(1725,)\n"
+     "ename": "KeyError",
+     "evalue": "'train'",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mKeyError\u001b[0m                                  Traceback (most recent call last)",
+      "Cell \u001b[0;32mIn[30], line 3\u001b[0m\n\u001b[1;32m      1\u001b[0m \u001b[38;5;28;01mfrom\u001b[39;00m \u001b[38;5;21;01msklearn\u001b[39;00m\u001b[38;5;21;01m.\u001b[39;00m\u001b[38;5;21;01mpreprocessing\u001b[39;00m \u001b[38;5;28;01mimport\u001b[39;00m OneHotEncoder\n\u001b[0;32m----> 3\u001b[0m Y_train \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39marray(\u001b[43mdata\u001b[49m\u001b[43m[\u001b[49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[38;5;124;43mtrain\u001b[39;49m\u001b[38;5;124;43m\"\u001b[39;49m\u001b[43m]\u001b[49m[\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mlabel\u001b[39m\u001b[38;5;124m\"\u001b[39m])\n\u001b[1;32m      4\u001b[0m Y_val \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39marray(data[val_key][\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mlabel\u001b[39m\u001b[38;5;124m\"\u001b[39m])\n\u001b[1;32m      5\u001b[0m Y_test \u001b[38;5;241m=\u001b[39m np\u001b[38;5;241m.\u001b[39marray(data[test_key][\u001b[38;5;124m\"\u001b[39m\u001b[38;5;124mlabel\u001b[39m\u001b[38;5;124m\"\u001b[39m])\n",
+      "File \u001b[0;32m~/miniforge3/envs/fast/lib/python3.9/site-packages/datasets/dataset_dict.py:59\u001b[0m, in \u001b[0;36mDatasetDict.__getitem__\u001b[0;34m(self, k)\u001b[0m\n\u001b[1;32m     57\u001b[0m \u001b[38;5;28;01mdef\u001b[39;00m \u001b[38;5;21m__getitem__\u001b[39m(\u001b[38;5;28mself\u001b[39m, k) \u001b[38;5;241m-\u001b[39m\u001b[38;5;241m>\u001b[39m Dataset:\n\u001b[1;32m     58\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m \u001b[38;5;28misinstance\u001b[39m(k, (\u001b[38;5;28mstr\u001b[39m, NamedSplit)) \u001b[38;5;129;01mor\u001b[39;00m \u001b[38;5;28mlen\u001b[39m(\u001b[38;5;28mself\u001b[39m) \u001b[38;5;241m==\u001b[39m \u001b[38;5;241m0\u001b[39m:\n\u001b[0;32m---> 59\u001b[0m         \u001b[38;5;28;01mreturn\u001b[39;00m \u001b[38;5;28;43msuper\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43m)\u001b[49m\u001b[38;5;241;43m.\u001b[39;49m\u001b[38;5;21;43m__getitem__\u001b[39;49m\u001b[43m(\u001b[49m\u001b[43mk\u001b[49m\u001b[43m)\u001b[49m\n\u001b[1;32m     60\u001b[0m     \u001b[38;5;28;01melse\u001b[39;00m:\n\u001b[1;32m     61\u001b[0m         available_suggested_splits \u001b[38;5;241m=\u001b[39m [\n\u001b[1;32m     62\u001b[0m             split \u001b[38;5;28;01mfor\u001b[39;00m split \u001b[38;5;129;01min\u001b[39;00m (Split\u001b[38;5;241m.\u001b[39mTRAIN, Split\u001b[38;5;241m.\u001b[39mTEST, Split\u001b[38;5;241m.\u001b[39mVALIDATION) \u001b[38;5;28;01mif\u001b[39;00m split \u001b[38;5;129;01min\u001b[39;00m \u001b[38;5;28mself\u001b[39m\n\u001b[1;32m     63\u001b[0m         ]\n",
+      "\u001b[0;31mKeyError\u001b[0m: 'train'"
      ]
     }
    ],
@@ -347,11 +398,11 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "['meanpool_single']\n",
-      "meanpool_single embeddings found!\n",
-      "X_train shape: (3668, 1536)\n",
-      "X_val shape  : (408, 1536)\n",
-      "X_test shape : (1725, 1536)\n"
+      "['cls_single']\n",
+      "cls_single embeddings found!\n",
+      "X_train shape: (392702, 1536)\n",
+      "X_val shape  : (9832, 1536)\n",
+      "X_test shape : (9847, 1536)\n"
      ]
     }
    ],
@@ -400,9 +451,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "X_train shape: (3668, 1536)\n",
-      "X_val shape  : (408, 1536)\n",
-      "X_test shape : (1725, 1536)\n"
+      "X_train shape: (392702, 1536)\n",
+      "X_val shape  : (9832, 1536)\n",
+      "X_test shape : (9847, 1536)\n"
      ]
     }
    ],
@@ -496,9 +547,9 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(3668, 768)\n",
-      "(408, 768)\n",
-      "(1725, 768)\n"
+      "(392702, 768)\n",
+      "(9832, 768)\n",
+      "(9847, 768)\n"
      ]
     }
    ],
@@ -534,7 +585,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "(4076, 768) (4076,)\n"
+      "(402534, 768) (402534, 3)\n"
      ]
     }
    ],
@@ -560,7 +611,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [
     {
@@ -574,22 +625,24 @@
    "source": [
     "input_size = X_train_computed.shape[1]\n",
     "\n",
+    "# NO ABS\n",
+    "\n",
     "# best hyperparameter combination\n",
     "param_grid = {\n",
-    "    'max_epochs': [50],\n",
-    "    'batch_size': [128],\n",
-    "    'learning_rate': [0.0001],\n",
-    "    'category': ['BC'],\n",
+    "    'max_epochs': [6],\n",
+    "    'batch_size': [32],\n",
+    "    'learning_rate': [0.001],\n",
+    "    'category': ['MC'],\n",
     "    'norm': [False],\n",
     "    'input_size': [768],\n",
-    "    'layer_size': [768],\n",
-    "    'num_classes': [1],\n",
-    "    'num_layers': [1],\n",
-    "    'weight_decay': [0.01],\n",
-    "    'patience': [5],\n",
+    "    'layer_size': [384],\n",
+    "    'num_classes': [3],\n",
+    "    'num_layers': [10],\n",
+    "    'weight_decay': [0.0001],\n",
+    "    'patience': [3],\n",
     "    'min_delta': [0],\n",
-    "    'device': ['mps'],\n",
-    "    'verbose': [True]\n",
+    "    'verbose': [True],\n",
+    "    'device': ['mps']\n",
     "}\n",
     "\n",
     "# default overrides\n",
@@ -604,20 +657,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "saving results to ./results/meanpool_single/mrpc/test_20240109_224739_DistilRoBERTa.csv\n"
+      "saving results to ./results/cls_single/mnli_mismatched/test_20240110_003803_DistilRoBERTa.csv\n"
      ]
     },
     {
      "data": {
       "application/vnd.jupyter.widget-view+json": {
-       "model_id": "c85124b1ef2141499939e1f9766fdaa8",
+       "model_id": "77491c0bda994bcbb880749af475cc5f",
        "version_major": 2,
        "version_minor": 0
       },
@@ -632,7 +685,7 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "saving predictions to ./results/meanpool_single/mrpc/y_pred_20240109_224739_DistilRoBERTa.tsv\n"
+      "saving predictions to ./results/cls_single/mnli_mismatched/y_pred_20240110_003803_DistilRoBERTa.tsv\n"
      ]
     }
    ],
@@ -730,7 +783,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 20,
    "metadata": {},
    "outputs": [
     {
@@ -773,25 +826,57 @@
        "      <th>weight_decay</th>\n",
        "      <th>patience</th>\n",
        "      <th>min_delta</th>\n",
-       "      <th>device</th>\n",
        "      <th>verbose</th>\n",
+       "      <th>device</th>\n",
        "    </tr>\n",
        "  </thead>\n",
        "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>0</th>\n",
+       "      <td>0.0</td>\n",
+       "      <td>0.382248</td>\n",
+       "      <td>0.382248</td>\n",
+       "      <td>241.312466</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>18098.434982</td>\n",
+       "      <td>0.0</td>\n",
+       "      <td>6</td>\n",
+       "      <td>32</td>\n",
+       "      <td>0.001</td>\n",
+       "      <td>...</td>\n",
+       "      <td>False</td>\n",
+       "      <td>768</td>\n",
+       "      <td>384</td>\n",
+       "      <td>3</td>\n",
+       "      <td>10</td>\n",
+       "      <td>0.0001</td>\n",
+       "      <td>3</td>\n",
+       "      <td>0</td>\n",
+       "      <td>True</td>\n",
+       "      <td>mps</td>\n",
+       "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
-       "<p>0 rows × 21 columns</p>\n",
+       "<p>1 rows × 21 columns</p>\n",
        "</div>"
       ],
       "text/plain": [
-       "Empty DataFrame\n",
-       "Columns: [mcc, f1, accuracy, training time / epoch, embedding time, training energy / epoch, embedding energy, max_epochs, batch_size, learning_rate, category, norm, input_size, layer_size, num_classes, num_layers, weight_decay, patience, min_delta, device, verbose]\n",
-       "Index: []\n",
+       "   mcc        f1  accuracy  training time / epoch  embedding time  \\\n",
+       "0  0.0  0.382248  0.382248             241.312466             0.0   \n",
        "\n",
-       "[0 rows x 21 columns]"
+       "   training energy / epoch  embedding energy  max_epochs  batch_size  \\\n",
+       "0             18098.434982               0.0           6          32   \n",
+       "\n",
+       "   learning_rate  ...   norm  input_size  layer_size  num_classes  num_layers  \\\n",
+       "0          0.001  ...  False         768         384            3          10   \n",
+       "\n",
+       "   weight_decay  patience  min_delta  verbose  device  \n",
+       "0        0.0001         3          0     True     mps  \n",
+       "\n",
+       "[1 rows x 21 columns]"
       ]
      },
-     "execution_count": 30,
+     "execution_count": 20,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -803,26 +888,20 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "{'loss': 2.4890098571777344,\n",
-       " 'accuracy': 0.0,\n",
-       " 'f1': 0.0,\n",
+       "{'loss': -0.0,\n",
+       " 'accuracy': 0.3822484005280796,\n",
+       " 'f1': 0.3822484005280796,\n",
        " 'mcc': 0.0,\n",
-       " 'predictions': tensor([[1],\n",
-       "         [1],\n",
-       "         [1],\n",
-       "         ...,\n",
-       "         [1],\n",
-       "         [1],\n",
-       "         [0]])}"
+       " 'predictions': tensor([0, 2, 1,  ..., 1, 2, 2])}"
       ]
      },
-     "execution_count": 84,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -832,29 +911,73 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "y_pred_df['prediction'] = y_pred_df['prediction'].replace({0: 'entailment', 1: 'not_entailment'})"
+    "## Reformat Output"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### QNLI & RTE"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
-    "y_pred_df.to_csv(test_y_pred_file, sep='\\t', index=False, header=True)"
+    "import pandas as pd\n",
+    "filepath = \"./glue_submission/cls/RTE.tsv\"\n",
+    "new_filepath = \"./glue_submission/cls/RTE_new.tsv\"\n",
+    "\n",
+    "df = pd.read_csv(filepath, sep='\\t')\n",
+    "df['prediction'] = df['prediction'].replace({0: 'entailment', 1: 'not_entailment'})\n",
+    "df.to_csv(new_filepath, sep='\\t', index=False)"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "# y_pred_df['prediction'] = y_pred_df['prediction'].replace({0: 'entailment', 1: 'not_entailment'})"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 19,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# y_pred_df.to_csv(test_y_pred_file, sep='\\t', index=False, header=True)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### MNLI"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 14,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "import pandas as pd\n",
+    "filepath = \"./glue_submission/cls/MNLI-m.tsv\"\n",
+    "new_filepath = \"./glue_submission/cls/MNLI-m_new.tsv\"\n",
+    "\n",
+    "df = pd.read_csv(filepath, sep='\\t')\n",
+    "df['prediction'] = df['prediction'].replace({0: 'entailment', 1: 'neutral', 2: 'contradiction'})\n",
+    "df.to_csv(new_filepath, sep='\\t', index=False)"
+   ]
   }
  ],
  "metadata": {
